@@ -1,3 +1,18 @@
 # Group 44 Runway Re-declaration Tool
+ 
+ Tool for re-declaring use-able ranges of a runway based on obstructions present.
+ 
+ Jar file located in `out/artifacts/group44-planes/`. 
+ 
+ Can be run with:
+ 
+ ```bash
+ java --module-path %PATH_TO_JAVAFX% --add-modules ALL-MODULE-PATH Main.java
 
-test 2
+java --module-path %PATH_TO_JAVAFX% --add-modules ALL-MODULE-PATH -jar out/artifacts/group44_planes_jar/group44-planes.jar
+```
+
+where %PATH_TO_JAVAFX% is the path to to a javafx-sdk.
+
+Created using Java 11 and JavaFX 15.
+
